(fixed: previous carousel image  slightly visible on left edge) decreased left padding by two pixels

--- a/src/Components/AboutUs.css
+++ b/src/Components/AboutUs.css
@@ -19,7 +19,7 @@
     font-size: 1.2rem;
     padding: 3rem;
     text-align: justify;
-    color: var(--md-sys-color-on-secondary-container);
+    color: var(--md-sys-color-on-background);
 
 }
 
