--- a/src/Components/Carousel.css
+++ b/src/Components/Carousel.css
@@ -2,8 +2,8 @@
   display: flex;
   position: relative;
   height: 500px;
-  width: 85%;
-  padding: 0 16px;
+  width: 80%;
+  padding: 0 14px 0 16px;
   overflow-x: auto;
   margin: auto;
   scroll-behavior: smooth;
@@ -14,6 +14,7 @@
 .carousel-container::-webkit-scrollbar {
   display: none;
 }
+
 .carousel-item {
   width: 20%;
   position: relative;
@@ -47,6 +48,4 @@
   object-fit: cover;
   border-radius: 32px;
 }
-.carousel-item:hover {
-  scale: 0.97;
-}
+
